Fix spacing and fonts

--- a/static/src/stylesheets/module/site-messages/_first-pv-consent.scss
+++ b/static/src/stylesheets/module/site-messages/_first-pv-consent.scss
@@ -197,16 +197,15 @@ $btn-height: ($gs-baseline*3.5);
 
 // commercialIabConsentBanner a/b test styles
 .site-message--first-pv-consent--commercialIabConsentBanner {
+    font-family: "Guardian Text Egyptian Web",Georgia,serif;
     .cmp-list-container {
         .cmp-button {
             border: 0;
             color: currentColor;
             background-color: transparent;
-            margin: 0;
             padding: 0;
             position: relative;
             padding-left: 24px;
-            margin-bottom: 4px;
             margin-left: -4px;
 
             &::before {
@@ -229,11 +228,17 @@ $btn-height: ($gs-baseline*3.5);
             max-height: 0;
             transition: max-height .15s ease-out;
             overflow-y: hidden;
-            padding-left: 24px;
+            padding-left: 36px;
             list-style-position: outside;
 
+            &::after {
+                content: '';
+                height: 8px;
+                display: block;
+            }
+
             li {
-                padding-top: 2px;
+                padding-top: 4px;
             }
         }
     }
